--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ repositories {
 
 dependencies {
     compileOnly("org.spigotmc:spigot-api:1.20.2-R0.1-SNAPSHOT")
-    compileOnly "jp.jyn:Jecon:2.2.1"
+    compileOnly("jp.jyn:Jecon:2.2.1")
 }
 
 def targetJavaVersion = 17
