--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,11 @@
 name: peto-casinoV2
 version: '1.0'
 main: com.petoma.petoCasinoV2.PetoCasinoV2
-api-version: '1.20'
+api-version: 1.20
+depend: [Jecon]
+commands:
+  chn:
+    description: Start or join a 丁半ゲーム.
+    usage: /chn start <金額>
+    aliases: [casino]
+
