--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,9 +7,9 @@ messages:
   already_participated: "§cすでに参加済みです！"
   joined_game: "§a{player}さんがゲームに参加しました！ 残り時間: {time}秒"
   game_time: "§a残り時間: {time}秒"
-  choose_high: "§a高いにかけました。"
-  choose_low: "§a低いにかけました。"
-  choose_medium: "§aラッキーセブンにかけました。"
+  choose_high: "§a{player}さんは、高いにかけました。"
+  choose_low: "§a{player}さんは、低いにかけました。"
+  choose_medium: "§a{player}さんは、ラッキーセブンにかけました。"
   draw_started: "§a抽選を開始しています..."
   draw_dice1: "§a1つめのサイコロの出目は{number}でした。"
   draw_dice2: "§a2つめのサイコロの出目は{number}でした。"
